fixed spacing on data

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
 }
 
-#NavBar {
-  
+#NavBar{
+  background-color: gray;
+  padding : 50px;
 }
